logs/python-reddwarfclient.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/python_reddwarfclient-0.1.2.egg-info'...
Listing './lib/python3.5/site-packages/reddwarfclient'...
Compiling './lib/python3.5/site-packages/reddwarfclient/auth.py'...
***   File "./lib/python3.5/site-packages/reddwarfclient/auth.py", line 80
    print "Found more than one valid endpoint. Use a more "\
                                                          ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/reddwarfclient/base.py'...
***   File "./lib/python3.5/site-packages/reddwarfclient/base.py", line 107
    os.makedirs(cache_dir, 0755)
                              ^
SyntaxError: invalid token

Compiling './lib/python3.5/site-packages/reddwarfclient/cli.py'...
***   File "./lib/python3.5/site-packages/reddwarfclient/cli.py", line 62
    print self.dbaas.instances.delete(self.id)
             ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/reddwarfclient/client.py'...
***   File "./lib/python3.5/site-packages/reddwarfclient/client.py", line 233
    except exceptions.Unauthorized, ex:
                                  ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/reddwarfclient/common.py'...
***   File "./lib/python3.5/site-packages/reddwarfclient/common.py", line 46
    print "\t%-20s%s" % (k, v.__doc__)
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/reddwarfclient/mcli.py'...
***   File "./lib/python3.5/site-packages/reddwarfclient/mcli.py", line 44
    print json.dumps(info, sort_keys=True, indent=4)
             ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
